--- a/workspace_python/리스트.ipynb
+++ b/workspace_python/리스트.ipynb
@@ -29,7 +29,10 @@
     "2. [a:b] = [c:d]\n",
     "3. del 리스트명[a:b]\n",
     "\n",
-    "* [-1] : 뒤에서 부터  (index번호임)"
+    "* [-1] : 뒤에서 부터  (index번호임)\n",
+    "\n",
+    "* 문자열로 리스트\n",
+    "1) 아래 예제문과 예제 문제 읽어보기"
    ]
   },
   {
@@ -78,7 +81,11 @@
     "    if r == 'r' :\n",
     "      cnt = cnt + 1\n",
     "    \n",
-    "print(f'r의 개수 : {cnt}')\n"
+    "print(f'r의 개수 : {cnt}')\n",
+    "\n",
+    "\n",
+    "# for i => 'father', 'mother' ...생략\n",
+    "# for r in i 의 r => 'f','a','t','h' ...생략\n"
    ]
   },
   {
