--- a/workspace_python/함수.ipynb
+++ b/workspace_python/함수.ipynb
@@ -208,6 +208,58 @@
     "print('안녕',end='   ')\n",
     "print('아항')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['c', 'g', 'j']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 매개변수로 세개의 문자열이 전달되면 세 문자열의 2번째 그잘를 모은 리스트를 리턴하는 함수\n",
+    "# 단 매개변수로 전달되는 문자열은 모두 길이가 3이상인 문자열만 들어온다고 가정\n",
+    "\n",
+    "def strList(str1, str2, str3) :\n",
+    "  return [str1[2:3],str2[2:3],str3[2:3]]\n",
+    "\n",
+    "print(strList('abcd','efg','hijk'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 배열의 맥스값 구하기\n",
+    "\n",
+    "def getMax1(list1, list2) :\n",
+    "  return max(list1 + list2)\n",
+    "\n",
+    "print(getMax1([1,2,3],[4,5]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
