--- a/8월 27일 평가대비 자료/라즈베리파이 사물 제어 IOT 평가.ipynb
+++ b/8월 27일 평가대비 자료/라즈베리파이 사물 제어 IOT 평가.ipynb
@@ -212,31 +212,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'행정기관': ['서울특별시', '부산광역시', '대구광역시', '인천광역시', '울산광역시'], '0~4세': [214651, 68006, 53515, 69453, 29835], '5~9세': [210833, 68704, 58332, 68555, 29331], '10~14세': [269171, 94802, 91268, 86574, 29035], '15~19세': [335828, 124564, 101110, 106435, 49119], '20~24세': [343797, 125907, 96078, 102297, 43937]}\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "string indices must be integers, not 'str'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[157], line 7\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# 6번 문제 답안 작성\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(population)\n\u001b[1;32m----> 7\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28;43mtuple\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mm\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m0~4세\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mm\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mpopulation\u001b[49m\u001b[43m)\u001b[49m)\n",
-      "Cell \u001b[1;32mIn[157], line 7\u001b[0m, in \u001b[0;36m<genexpr>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# 6번 문제 답안 작성\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(population)\n\u001b[1;32m----> 7\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mtuple\u001b[39m(\u001b[43mm\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m0~4세\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m m \u001b[38;5;129;01min\u001b[39;00m population))\n",
-      "\u001b[1;31mTypeError\u001b[0m: string indices must be integers, not 'str'"
+      "[214651, 68006, 53515, 69453, 29835]\n",
+      "435460\n",
+      "서울특별시\n",
+      "부산광역시\n",
+      "대구광역시\n",
+      "인천광역시\n",
+      "울산광역시\n",
+      "214651\n",
+      "68006\n",
+      "53515\n",
+      "69453\n",
+      "29835\n",
+      "210833\n",
+      "68704\n",
+      "58332\n",
+      "68555\n",
+      "29331\n",
+      "269171\n",
+      "94802\n",
+      "91268\n",
+      "86574\n",
+      "29035\n",
+      "335828\n",
+      "124564\n",
+      "101110\n",
+      "106435\n",
+      "49119\n",
+      "343797\n",
+      "125907\n",
+      "96078\n",
+      "102297\n",
+      "43937\n"
      ]
     }
    ],
    "source": [
     "# 6번 문제 답안 작성\n",
+    "\n",
+    "print(population['0~4세'])\n",
+    "\n",
+    "ageSum = 0\n",
+    "\n",
+    "for age in population['0~4세'] :\n",
+    "  ageSum = ageSum + age\n",
+    "\n",
+    "print(ageSum)\n",
     "\n"
    ]
   },
