--- a/8월 27일 평가대비 자료/라즈베리파이 사물 제어 IOT 평가.ipynb
+++ b/8월 27일 평가대비 자료/라즈베리파이 사물 제어 IOT 평가.ipynb
@@ -277,11 +277,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'population' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# 7번 문제 답안 작성\u001b[39;00m\n\u001b[0;32m      3\u001b[0m TotalAge \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m;\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[43mpopulation\u001b[49m :\n\u001b[0;32m      5\u001b[0m   \u001b[38;5;28;01mif\u001b[39;00m(i \u001b[38;5;241m!=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m행정기관\u001b[39m\u001b[38;5;124m'\u001b[39m) :\n\u001b[0;32m      6\u001b[0m     \u001b[38;5;28mprint\u001b[39m(i)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'population' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "# 7번 문제 답안 작성\n"
+    "# 7번 문제 답안 작성\n",
+    "\n",
+    "# TotalAge = 0;\n",
+    "# for i in population :\n",
+    "#   if(i != '행정기관') :\n",
+    "#     print(i)\n",
+    "#     for age in population[i] :\n",
+    "#       TotalAge = TotalAge +i\n",
+    "\n",
+    "# print(TotalAge)"
    ]
   }
  ],
