--- a/8월 27일 평가대비 자료/라즈베리파이 사물 제어 IOT 평가.ipynb
+++ b/8월 27일 평가대비 자료/라즈베리파이 사물 제어 IOT 평가.ipynb
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,59 +212,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[214651, 68006, 53515, 69453, 29835]\n",
-      "435460\n",
-      "서울특별시\n",
-      "부산광역시\n",
-      "대구광역시\n",
-      "인천광역시\n",
-      "울산광역시\n",
-      "214651\n",
-      "68006\n",
-      "53515\n",
-      "69453\n",
-      "29835\n",
-      "210833\n",
-      "68704\n",
-      "58332\n",
-      "68555\n",
-      "29331\n",
-      "269171\n",
-      "94802\n",
-      "91268\n",
-      "86574\n",
-      "29035\n",
-      "335828\n",
-      "124564\n",
-      "101110\n",
-      "106435\n",
-      "49119\n",
-      "343797\n",
-      "125907\n",
-      "96078\n",
-      "102297\n",
-      "43937\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 6번 문제 답안 작성\n",
-    "\n",
-    "print(population['0~4세'])\n",
-    "\n",
-    "ageSum = 0\n",
-    "\n",
-    "for age in population['0~4세'] :\n",
-    "  ageSum = ageSum + age\n",
-    "\n",
-    "print(ageSum)\n",
     "\n"
    ]
   },
@@ -277,32 +229,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'population' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# 7번 문제 답안 작성\u001b[39;00m\n\u001b[0;32m      3\u001b[0m TotalAge \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m;\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[43mpopulation\u001b[49m :\n\u001b[0;32m      5\u001b[0m   \u001b[38;5;28;01mif\u001b[39;00m(i \u001b[38;5;241m!=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m행정기관\u001b[39m\u001b[38;5;124m'\u001b[39m) :\n\u001b[0;32m      6\u001b[0m     \u001b[38;5;28mprint\u001b[39m(i)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'population' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2871137\n"
      ]
     }
    ],
    "source": [
     "# 7번 문제 답안 작성\n",
     "\n",
-    "# TotalAge = 0;\n",
-    "# for i in population :\n",
-    "#   if(i != '행정기관') :\n",
-    "#     print(i)\n",
-    "#     for age in population[i] :\n",
-    "#       TotalAge = TotalAge +i\n",
+    "totalAge = 0\n",
     "\n",
-    "# print(TotalAge)"
+    "for i in population :\n",
+    "  if(i != '행정기관') :\n",
+    "    for age in population[i] :\n",
+    "      totalAge = totalAge + age\n",
+    "\n",
+    "print(totalAge)"
    ]
   }
  ],
