--- a/8월 27일 평가대비 자료/파이썬평가/라즈베리파이 사물 제어 IOT 평가.ipynb
+++ b/8월 27일 평가대비 자료/파이썬평가/라즈베리파이 사물 제어 IOT 평가.ipynb
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,6 +204,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# del age\n",
+    "# del ageName\n",
+    "# del df\n",
+    "# del ismax\n",
+    "# del po\n",
+    "# del result1\n",
+    "# del totalAge\n",
+    "# del population\n",
+    "# del i"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -212,11 +230,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 104,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15~19세\n"
+     ]
+    }
+   ],
    "source": [
     "# 6번 문제 답안 작성\n",
+    "import pandas\n",
+    "\n",
+    "df = pandas.DataFrame(population)\n",
+    "\n",
+    "ismax = 0\n",
+    "ageName = '';\n",
+    "\n",
+    "for po in population :\n",
+    "  if(po != '행정기관') :\n",
+    "    result1 = df[po].sum()\n",
+    "    # print(result1)\n",
+    "    if(result1 > ismax) :\n",
+    "      ismax = result1\n",
+    "      ageName = po\n",
+    "\n",
+    "\n",
+    "# print()\n",
+    "# print(ismax)\n",
+    "print(ageName)\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
@@ -229,15 +276,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2871137\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{'행정기관': ['서울특별시', '부산광역시', '대구광역시', '인천광역시', '울산광역시'],\n",
+       " '0~4세': [214651, 68006, 53515, 69453, 29835],\n",
+       " '5~9세': [210833, 68704, 58332, 68555, 29331],\n",
+       " '10~14세': [269171, 94802, 91268, 86574, 29035],\n",
+       " '15~19세': [335828, 124564, 101110, 106435, 49119],\n",
+       " '20~24세': [343797, 125907, 96078, 102297, 43937],\n",
+       " '총 인구수': 2871137}"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -248,9 +304,14 @@
     "for i in population :\n",
     "  if(i != '행정기관') :\n",
     "    for age in population[i] :\n",
-    "      totalAge = totalAge + age\n",
+    "      totalAge = totalAge +age\n",
     "\n",
-    "print(totalAge)"
+    "\n",
+    "\n",
+    "population['총 인구수'] = totalAge\n",
+    "\n",
+    "population\n",
+    "\n"
    ]
   }
  ],
