파이썬 시험 완료

--- a/8월 27일 평가대비 자료/파이썬평가/라즈베리파이 사물 제어 IOT 평가.ipynb
+++ b/8월 27일 평가대비 자료/파이썬평가/라즈베리파이 사물 제어 IOT 평가.ipynb
@@ -16,14 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5 2\n"
+      "10 5\n"
      ]
     }
    ],
@@ -44,14 +44,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9\n"
+      "20\n"
      ]
     }
    ],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -112,14 +112,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'brand': '삼성', 'modelName': '갤럭시', 'price': 100000}\n"
+      "{'brand': '삼성', 'modelName': '갤럭시 울트라', 'price': 1500000}\n"
      ]
     }
    ],
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
        " '총 인구수': 2871137}"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
