--- a/8월 27일 평가대비 자료/파이썬평가/라즈베리파이활용 데이터 분석 및 시각화.ipynb
+++ b/8월 27일 평가대비 자료/파이썬평가/라즈베리파이활용 데이터 분석 및 시각화.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "d87dac44",
    "metadata": {},
    "outputs": [
@@ -134,7 +134,7 @@
        "008   개발부  조자바     1      C#  174.7"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 42,
    "id": "98bf2c8b",
    "metadata": {},
    "outputs": [
@@ -186,7 +186,7 @@
        "Name: 사원명, dtype: object"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 43,
    "id": "0ba0b584",
    "metadata": {},
    "outputs": [
@@ -307,7 +307,7 @@
        "008   개발부  조자바     1"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 44,
    "id": "0846bd90",
    "metadata": {},
    "outputs": [
@@ -394,7 +394,7 @@
        "008   개발부  조자바"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 45,
    "id": "e99f425b",
    "metadata": {},
    "outputs": [
@@ -487,7 +487,7 @@
        "006   개발부  강자바  166.6"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 46,
    "id": "43bcb26a",
    "metadata": {},
    "outputs": [
@@ -628,7 +628,7 @@
        "002   인사부  이자바     5     NaN  161.1"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 47,
    "id": "fd709e97",
    "metadata": {},
    "outputs": [
@@ -769,7 +769,7 @@
        "008   개발부  조자바     1      C#  174.7"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -792,26 +792,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 60,
    "id": "b1cd1c5c",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'method' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[42], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# df.loc[df['근속년수']==1,'키']\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[43mdf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgroupby\u001b[49m\u001b[43m[\u001b[49m\u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m근속년수\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m==\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m키\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'method' object is not subscriptable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "평균키: 166.8\n"
      ]
     }
    ],
    "source": [
-    "# df.loc[df['근속년수']==1,'키']\n",
-    "\n"
+    "[df[(df['부서명']=='개발부') & (df['근속년수'] ==1)]]\n",
+    "\n",
+    "\n",
+    "result = df.loc[(df['부서명']=='개발부') & (df['근속년수'] ==1), '키'].mean()\n",
+    "\n",
+    "print(f'평균키: {result}')\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74348883",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
